--- a/prova.html
+++ b/prova.html
@@ -19,5 +19,9 @@
         </div>
     </header>
     <div id="baner"></div>
+    <div class="retangulo">
+        <div class="retangulo1"></div>
+        <div class="retangulo2"></div>
+    </div>
 </body>
 </html>
