--- a/prova.html
+++ b/prova.html
@@ -19,9 +19,55 @@
         </div>
     </header>
     <div id="baner"></div>
-    <div class="retangulo">
-        <div class="retangulo1"></div>
-        <div class="retangulo2"></div>
+    <div class="re">
+        <div class="re1"><p>Agende Sua </p><p>Sessão</p></div>
+        <div class="re2"><p>Veja Nossas </p><p>Promoções</p></div>
     </div>
+    <div class="retangulo">
+        <div class="retangulo1"> ></div>
+        <div class="retangulo2"> </div>
+        <div class="retangulo3"> </div>
+        <div class="retangulo4"> </div>
+        <div class="retangulo5"> </div>
+        <div class="retangulo6"> </div>
+        <div class="retangulo7"> </div>
+        <div class="retangulo8"> </div>
+        <div class="retangulo9"> </div>
+        <div class="retangulo0"> </div>
+        <div class="retangulol"> </div>
+        <div class="retangulos"> </div>
+    </div>
+    <header class="header2">
+        <div class="img">
+        <img class="logo" src="https://img.icons8.com/?size=100&id=DMouakoWuTB6&format=png&color=000000">
+        </div>
+        <div class="sociais2">
+        <div>
+            <ul class="ul2">
+                <li>Nos siga nas redes sociais</li>
+            </ul>
+        </div>
+        <div class="sociais">
+        <div class="img">
+            <img class="logo" src="https://img.icons8.com/?size=100&id=118467&format=png&color=FFFFFF">
+        </div>
+        <div class="img">
+            <img class="logo" src="https://img.icons8.com/?size=100&id=32309&format=png&color=FFFFFF">
+        </div>
+        <div class="img">
+            <img class="logo" src="https://img.icons8.com/?size=100&id=8808&format=png&color=FFFFFF">
+        </div>
+        <div class="img">
+            <img class="logo" src="https://img.icons8.com/?size=100&id=aL0F8ToUoPjC&format=png&color=FFFFFF">
+        </div>
+        </div>
+        </div>
+        <div>
+            <ul class="ul2">
+                <li> 872 Morada Feliz - Cidade das Flores</li>
+                <li>MG / 39567 - 123</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
