--- a/prova.html
+++ b/prova.html
@@ -20,8 +20,14 @@
     </header>
     <div id="baner"></div>
     <div class="re">
-        <div class="re1"><p>Agende Sua </p><p>Sessão</p></div>
-        <div class="re2"><p>Veja Nossas </p><p>Promoções</p></div>
+        <div class="re1">
+            <p>Agende Sua </p>
+            <p>Sessão</p>
+        </div>
+        <div class="re2">
+            <p>Veja Nossas </p>
+            <p>Promoções</p>
+        </div>
     </div>
     <div class="retangulo">
         <div class="retangulo1"> ></div>
