--- a/prova.html
+++ b/prova.html
@@ -21,27 +21,27 @@
     <div id="baner"></div>
     <div class="re">
         <div class="re1">
-            <p>Agende Sua </p>
+            <p>Agende Sua</p>
             <p>Sessão</p>
         </div>
         <div class="re2">
-            <p>Veja Nossas </p>
+            <p>Veja Nossas</p>
             <p>Promoções</p>
         </div>
     </div>
     <div class="retangulo">
-        <div class="retangulo1"> ></div>
-        <div class="retangulo2"> </div>
-        <div class="retangulo3"> </div>
-        <div class="retangulo4"> </div>
-        <div class="retangulo5"> </div>
-        <div class="retangulo6"> </div>
-        <div class="retangulo7"> </div>
-        <div class="retangulo8"> </div>
-        <div class="retangulo9"> </div>
-        <div class="retangulo0"> </div>
-        <div class="retangulol"> </div>
-        <div class="retangulos"> </div>
+        <div class="retangulo1"> <p>25 Fotos</p> </div>
+        <div class="retangulo2"> <p>30 Fotos</p> <p> e Revista</p> </div>
+        <div class="retangulo3"> <p>Fotos para</p> <p>Casamento</p> </div>
+        <div class="retangulo4"> <p>50 Fotos</p> <p>e Álbum</p> </div>
+        <div class="retangulo5"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo6"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo7"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo8"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo9"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo0"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulol"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulos"> <p>Veja Nossas Promoções</p> </div>
     </div>
     <header class="header2">
         <div class="img">
