--- a/prova.html
+++ b/prova.html
@@ -30,18 +30,18 @@
         </div>
     </div>
     <div class="retangulo">
-        <div class="retangulo1"> <p>25 Fotos</p> </div>
-        <div class="retangulo2"> <p>30 Fotos</p> <p> e Revista</p> </div>
-        <div class="retangulo3"> <p>Fotos para</p> <p>Casamento</p> </div>
-        <div class="retangulo4"> <p>50 Fotos</p> <p>e Álbum</p> </div>
-        <div class="retangulo5"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulo6"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulo7"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulo8"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulo9"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulo0"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulol"> <p>Veja Nossas Promoções</p> </div>
-        <div class="retangulos"> <p>Veja Nossas Promoções</p> </div>
+        <div class="retangulo1"> <p>Pacote</p><p>Básico</p><p>R$ 400,00</p> </div>
+        <div class="retangulo2"> <p>Pacote</p><p>Família</p><p>R$ 1.000,00</p> </div>
+        <div class="retangulo3"> <p>Pacote</p><p>Premium</p><p>R$ 2.000,00</p> </div>
+        <div class="retangulo4"> <p>Pacote</p><p>Casamento</p><p>R$ 6.000,00</p> </div>
+        <div class="retangulo5"> <p>Pacote</p><p>Empresarial</p><p>R$ 1.500,00</p> </div>
+        <div class="retangulo6"> <p>Pacote</p><p>Infantil</p><p>R$ 800,00</p> </div>
+        <div class="retangulo7"> <p>Pacote</p><p>Temático</p><p>R$ 1.200,00</p> </div>
+        <div class="retangulo8"> <p>Pacote de</p><p>Assinatura</p><p>R$ 1.500,00</p><p> por mês</p> </div>
+        <div class="retangulo9"> <p>Pacote Mini</p><p>Ensaio</p><p>R$ 300,00</p> </div>
+        <div class="retangulo0"> <p>Pacote</p><p>Pets</p><p>R$ 700,00</p> </div>
+        <div class="retangulol"> <p>Pacote Evento</p><p>Social</p><p>R$ 2.000,00</p> </div>
+        <div class="retangulos"> <p>Pacote</p><p>Maternidade</p><p>R$ 3.500,00</p> </div>
     </div>
     <header class="header2">
         <div class="img">
